@@ -137,6 +137,8 @@ extern void         cf_object_change_exp(object *op, sint64 exp, const char *ski
 extern int          cf_object_change_abil(object *op, object *tmp);
 extern int          cf_object_user_event(object *op, object *activator, object *third, const char *message, int fix);
 extern int          cf_object_remove_depletion(object *op, int level);
+extern object      *cf_object_find_by_arch_name(const object *who, const char *name);
+extern object      *cf_object_find_by_name(const object *who, const char *name);
 /* Maps */
 /*extern void        *cf_map_get_property(mapstruct *map, int propcode);*/
 extern sstring cf_map_get_sstring_property(mapstruct *map, int propcode);
