@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Don't call server functions directly from plugins.
+Nicolas Weeger 2010-02-28
+
 Make object_dump() and get_ob_diff() use const object*.
 Nicolas Weeger 2010-02-28
 
